feat(categories): add filter and search functionality